--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@vercel/analytics": "^1.3.1",
     "aos": "^2.3.4",
     "html-react-parser": "^1.4.6",
     "react": "^17.0.2",
